--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/cormorant-garamond": "^5.1.0",
+    "@fontsource/poppins": "^5.1.0",
+    "@mui/icons-material": "^6.1.7",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
