--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/poppins": "^5.1.0",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.8",
+    "lodash.debounce": "^4.0.8",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
